Moved copyColumns method into copy service

--- a/src/app/components/copymode/copymode.component.html
+++ b/src/app/components/copymode/copymode.component.html
@@ -21,7 +21,7 @@
         [workbook]="workbook"
         (close)="closeFile($event)"
         (save)="saveFile($event)"
-        (copy)="copyColumns()"
+        (copy)="store.copyColumns()"
         (selectDiff)="diffButtonClicked(workbook.filename, $event)"
         (selectCopy)="checkMarkClicked(workbook.filename, $event)"
         (selectHeader)="headerClicked(workbook.filename, $event)">
