--- a/src/app/components/copymode/subcomponents/header/header.component.scss
+++ b/src/app/components/copymode/subcomponents/header/header.component.scss
@@ -98,12 +98,12 @@
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background-color: #eee;
+  background-color: $scroll-track;
   border-radius: 10px;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #c7c7c7;
+  background: $scrollbar;
   border-radius: 10px;
 }
