--- a/src/app/components/copymode/subcomponents/workbook/workbook.component.scss
+++ b/src/app/components/copymode/subcomponents/workbook/workbook.component.scss
@@ -58,13 +58,13 @@ input {
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background-color: #eee;
+  background-color: $scroll-track;
   border-radius: 10px;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #c7c7c7;
+  background: $scrollbar;
   border-radius: 10px;
 }
 
