--- a/src/colors.scss
+++ b/src/colors.scss
@@ -8,3 +8,6 @@ $sidebar-color2-em: #cc6be3;
 $sidebar-color2-dark: #a74bbd;
 $sidebar-highlight-text-color: #333;
 $sidebar-text-color: #333;
+
+$scroll-track: #eee;
+$scrollbar: #c7c7c7;
