Massive SASS cleanup

--- a/src/app/components/copymode/subcomponents/workbook/workbook.component.html
+++ b/src/app/components/copymode/subcomponents/workbook/workbook.component.html
@@ -1,9 +1,9 @@
 <div class="col">
-  <div id="encompass">
+  <div class="encompass">
 
     <article class="col">
-      <section class="row" id="actionbar-container">
-        <span id="actionbar">
+      <section class="row actionbar-container">
+        <span class="actionbar">
           <span class="actionbar-item actionbar-text">
             {{ workbook.filename.split('.')[0] }}
           </span>
