--- a/src/app/components/copymode/subcomponents/workbook/workbook.component.html
+++ b/src/app/components/copymode/subcomponents/workbook/workbook.component.html
@@ -31,11 +31,11 @@
         *ngIf="store.copyToHeader.length && store.copyFromHeader.length && store.keyPair.getWhichKeyFileIn(workbook.filename) == 1"
         (click)="copyButtonClicked()">
         <div class="col justify-content-center">
-          <span class="text-underline row no-gutters justify-content-center"> {{ store.keyPair.secondaryFile }} </span>
-          <span class="text-purple row no-gutters justify-content-center"> {{ store.copyFromHeader.split(":")[1] }} </span>
-          <span class="row no-gutters justify-content-center"><i class="fas fa-arrow-down text-purple"></i></span>
-          <span class="text-underline row no-gutters justify-content-center"> {{ store.keyPair.primaryFile }} </span>
-          <span class="text-purple row no-gutters justify-content-center"> {{ store.copyToHeader.split(":")[1] }}? </span>
+          <span class="text-purple row no-gutters justify-content-center"> {{ store.keyPair.secondaryFile }} </span>
+          <span class="row no-gutters justify-content-center"> {{ store.copyFromHeader.split(":")[1] }} </span>
+          <span class="row no-gutters justify-content-center"><i class="fas fa-arrow-down text-green"></i></span>
+          <span class="text-purple row no-gutters justify-content-center"> {{ store.keyPair.primaryFile }} </span>
+          <span class="row no-gutters justify-content-center"> {{ store.copyToHeader.split(":")[1] }}? </span>
         </div>
       </div>
     </article>
