--- a/src/colors.scss
+++ b/src/colors.scss
@@ -2,6 +2,7 @@
 $sidebar-color: #1ee89b;
 $sidebar-color-light: #00ff9d;
 $sidebar-color-em: #1cd991;
+$sidebar-color-dark: #57c299;
 
 $sidebar-color2: #e88aff;
 $sidebar-color2-em: #cc6be3;
