Animations, UI cleanup, and loading screens

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -18,6 +18,13 @@
 
   <ul class="list-unstyled components">
     <li>
+      <a href="#" (click)="electron.openInBrowser(versionUrl)">
+        <i class="fas fa-terminal"></i>
+        <b style="color: #444;">Version:
+        {{ versionNumber }}</b>
+      </a>
+    </li>
+    <li>
       <a href="#" (click)="refreshFiles()">
           <i class="fas fa-sync"></i>
           Refresh Files
@@ -26,22 +33,22 @@
           <i class="far fa-file-excel"></i>
           Workbooks
       </a>
-      <div>
-        <ul class="collapse list-unstyled" id="wbSubmenu">
-          <li *ngFor="let wb of workbooks" class="list-container">
-            <div [ngClass]="{'file-opened': openWorkbooks.includes(wb)}">
-              <a href="#">
-                <span class="file-select" (click)="openWorkbook(wb)">
-                  {{ wb }}
-                </span>
-              </a>
-              <i class="far fa-trash-alt trash-icon" (click)="trashButtonClicked(wb)"
-              tooltip="Click again to delete this file." trigger="click" placement="right" hide-delay="2000"
-              style="font-size: 18px;"></i>
-            </div>
-          </li>
-        </ul>
-      </div>
+    </li>
+    <li>
+      <ul class="collapse list-unstyled" id="wbSubmenu">
+        <li *ngFor="let wb of workbooks" class="list-container">
+          <div [ngClass]="{'file-opened': openWorkbooks.includes(wb)}">
+            <a href="#">
+              <span class="file-select" (click)="openWorkbook(wb)">
+                {{ wb }}
+              </span>
+            </a>
+            <i class="far fa-trash-alt trash-icon" (click)="trashButtonClicked(wb)"
+            tooltip="Click again to delete this file." trigger="click" placement="right" hide-delay="2000"
+            style="font-size: 18px;"></i>
+          </div>
+        </li>
+      </ul>
     </li>
   </ul>
 </nav>
