Trying to figure out loading animations during CPU intensive tasks

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -102,6 +102,7 @@ body::-webkit-scrollbar-thumb {
   left: 6px;
   width: 13px;
   background: $sidebar-color-light;
+  opacity: 0.5;
   animation: lds-facebook 1.2s cubic-bezier(0, 0.5, 0.5, 1) infinite;
 }
 .lds-facebook div:nth-child(1) {
