--- a/src/app/components/copymode/copymode.component.scss
+++ b/src/app/components/copymode/copymode.component.scss
@@ -1,6 +1,28 @@
 @import 'colors.scss';
 
 /* Classes */
+.loading-anim {
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  top: -10px;;
+  left: 0;
+  right: 0;
+  z-index: 10;
+  transition: all 0.3s;
+}
+
+.hardware-accelerated {
+   -webkit-transform: translate3d(0, 0, 0);
+   -moz-transform: translate3d(0, 0, 0);
+   -ms-transform: translate3d(0, 0, 0);
+   transform: translate3d(0, 0, 0);
+}
+
+.loading-anim-unseen {
+  opacity: 0;
+}
+
 .link {
   cursor: pointer;
   transition: all 0.4s;
