--- a/src/app/components/copymode/subcomponents/workbook/workbook.component.html
+++ b/src/app/components/copymode/subcomponents/workbook/workbook.component.html
@@ -24,13 +24,13 @@
         </div>
         <div class="col-sm-10 text-center">
           <span>
-            <i class="fas fa-arrow-left sheet left"
+            <i class="fas fa-arrow-left sheet left" (click)="previousSheetClicked()"
             [ngClass]="{'active': workbook.currentWorksheet['orderNo'] > 0,
             'inactive': workbook.currentWorksheet['orderNo'] === 0}"></i>
           </span>
           <span class="text-purple sheet-text">{{workbook.currentWorksheet.name}}</span>
           <span>
-            <i class="fas fa-arrow-right sheet right"
+            <i class="fas fa-arrow-right sheet right" (click)="nextSheetClicked()"
             [ngClass]="{'active': workbook.currentWorksheet['orderNo'] < workbook.worksheets.length - 1,
             'inactive': workbook.currentWorksheet['orderNo'] === workbook.worksheets.length - 1}"></i>
           </span>
