--- a/src/app/components/copymode/subcomponents/controlpanel/controlpanel.component.html
+++ b/src/app/components/copymode/subcomponents/controlpanel/controlpanel.component.html
@@ -1,3 +1,14 @@
-<p>
-  controlpanel works!
-</p>
+<div class="col">
+  <div class="encompass">
+    <article class="col">
+      <section class="row actionbar-container justify-content-center">
+        <span class="actionbar">
+          <span class="actionbar-item actionbar-text">
+            Control Panel
+          </span>
+        </span>
+      </section>
+    </article>
+    <div style="height: 10vh;"></div>
+  </div>
+</div>
