--- a/src/app/components/copymode/subcomponents/workbook/workbook.component.html
+++ b/src/app/components/copymode/subcomponents/workbook/workbook.component.html
@@ -22,13 +22,16 @@
           <!-- <i class="far fa-copy tab-icon"></i> -->
           <i class="far fa-file tab-icon"></i>
         </div>
-        <div class="col-sm-10 text-center">
+        <div class="col-sm-10 text-center" tooltip="{{ workbook.currentWorksheet.name }}" hide-delay="0">
           <span>
             <i class="fas fa-arrow-left sheet left" (click)="previousSheetClicked()"
             [ngClass]="{'active': workbook.currentWorksheet['orderNo'] > 0,
             'inactive': workbook.currentWorksheet['orderNo'] === 0}"></i>
           </span>
-          <span class="text-purple sheet-text">{{workbook.currentWorksheet.name}}</span>
+          <span class="text-purple sheet-text">
+            {{workbook.currentWorksheet.name.substring(0, 13)}}
+            <span *ngIf="workbook.currentWorksheet.name.length > 13">. . .</span>
+          </span>
           <span>
             <i class="fas fa-arrow-right sheet right" (click)="nextSheetClicked()"
             [ngClass]="{'active': workbook.currentWorksheet['orderNo'] < workbook.worksheets.length - 1,
