--- a/src/app/components/copymode/subcomponents/workbook/workbook.component.html
+++ b/src/app/components/copymode/subcomponents/workbook/workbook.component.html
@@ -38,6 +38,9 @@
             'inactive': workbook.currentWorksheet['orderNo'] === workbook.worksheets.length - 1}"></i>
           </span>
         </div>
+        <div class="col-sm-1">
+
+        </div>
       </section>
     </article>
 
