Control Panel is wired up for saving and copying

--- a/src/app/components/copymode/subcomponents/workbook/workbook.component.html
+++ b/src/app/components/copymode/subcomponents/workbook/workbook.component.html
@@ -39,7 +39,7 @@
           </span>
         </div>
         <div class="col-sm-1">
-
+          <!-- Don't delete -->
         </div>
       </section>
     </article>
