--- a/src/app/components/copymode/subcomponents/controlpanel/controlpanel.component.scss
+++ b/src/app/components/copymode/subcomponents/controlpanel/controlpanel.component.scss
@@ -31,3 +31,8 @@
 .actionbar-container {
   border-bottom: 1px solid $sidebar-color2;
 }
+
+.content-box {
+  margin: 0.4em 0.1em 0.4em 0.1em;
+  padding: 0.3em;
+}
