--- a/src/app/components/copymode/subcomponents/controlpanel/controlpanel.component.scss
+++ b/src/app/components/copymode/subcomponents/controlpanel/controlpanel.component.scss
@@ -32,9 +32,18 @@
   border-bottom: 1px solid $sidebar-color2;
 }
 
+.content-box-no-shadow {
+  margin: 0.4em 0.1em 0.4em 0.1em;
+  padding: 0.3em;
+}
+
 .content-box {
   margin: 0.4em 0.1em 0.4em 0.1em;
   padding: 0.3em;
+}
+
+.content-box-no-shadow.grey {
+  background-color: #fafafa;
 }
 
 .text-purple {
