--- a/src/app/components/copymode/subcomponents/controlpanel/controlpanel.component.scss
+++ b/src/app/components/copymode/subcomponents/controlpanel/controlpanel.component.scss
@@ -10,6 +10,10 @@
   margin-bottom: 10px;
 }
 
+.inactive-text {
+  color: #dfdfdf;
+}
+
 .actionbar-item {
   cursor: pointer;
   margin-right: 0.6em;
