Lighter color for workbooks

--- a/src/app/components/copymode/copymode.component.scss
+++ b/src/app/components/copymode/copymode.component.scss
@@ -55,7 +55,7 @@
 }
 
 .search-field {
-  background-color: #fafafa;
+  background-color: #fcfcfc;
   transition: all 0.4s;
   border-width: 0;
   border-bottom: 2px solid #ddd !important;
