--- a/src/app/components/copymode/subcomponents/controlpanel/controlpanel.component.scss
+++ b/src/app/components/copymode/subcomponents/controlpanel/controlpanel.component.scss
@@ -1,7 +1,7 @@
 @import 'colors.scss';
 
 .encompass {
-  background-color: #fafafa;
+  background-color: #fcfcfc;
   border-radius: 10px;
   border-width: 1px;
   border-style: solid;
