--- a/src/app/components/copymode/subcomponents/workbook/workbook.component.scss
+++ b/src/app/components/copymode/subcomponents/workbook/workbook.component.scss
@@ -144,7 +144,7 @@ input {
 
 // 'IDs'
 .encompass {
-  background-color: #fafafa;
+  background-color: #fcfcfc;
   border-radius: 10px;
   border-width: 1px;
   border-style: solid;
