Add copy header on right click

--- a/src/app/components/copymode/subcomponents/header/header.component.html
+++ b/src/app/components/copymode/subcomponents/header/header.component.html
@@ -2,7 +2,7 @@
   <div class="content-box white-border row">
 
     <span class="col-sm-12">
-      <span class="header selectable" (click)="onHeaderClick()">
+      <span class="header selectable" (click)="onHeaderClick()" (contextmenu)="copyText(header.name)">
         {{ header.name }}
       </span>
 
