Scrollbar for files

--- a/src/colors.scss
+++ b/src/colors.scss
@@ -12,3 +12,6 @@ $sidebar-text-color: #333;
 
 $scroll-track: #eee;
 $scrollbar: #c7c7c7;
+
+$sidebar-scroll-track: #1cd991;
+$sidebar-scrollbar: #cd78e3;
