--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -37,6 +37,12 @@ a:focus {
   position: relative;
 }
 
+#wbSubmenu {
+  max-height: 50vh;
+  overflow: scroll;
+  overflow-x: hidden;
+}
+
 .trash-icon {
   opacity: 0;
   position: absolute;
@@ -139,7 +145,8 @@ span {
   background: $sidebar-color;
   color: $sidebar-text-color;
   transition: all 0.3s;
-  height: 100%;
+  height: 100vh;
+  max-height: 100vh;
 }
 
 #sidebar.active {
@@ -261,4 +268,21 @@ a.article,
 a.article:hover {
   background: #6d7fcc !important;
   color: $sidebar-highlight-text-color !important;
+}
+
+/* SCROLLBAR */
+::-webkit-scrollbar {
+  width: 3px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background-color: $sidebar-scroll-track;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: $sidebar-scrollbar;
+  border-radius: 10px;
 }
